--- a/css/main.css
+++ b/css/main.css
@@ -11,19 +11,21 @@ body {
 	z-index: 1;
 }
 /*RYU*/
-.ryu {
-	float: left;
-	width: 659px;
-    height: 494px;
+.ryu-content {
+  float: left;
 }
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.ryu {
+	width: 659px;
+  height: 494px;
+}
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
   display: none;
 } 
 .ryu-ready {
@@ -34,6 +36,14 @@ body {
 }
 .ryu-throwing {
   background-image: url('../images/ryu-throwing-hadouken.png');
+}
+.ryu-cool {
+  background-image: url('../images/ryu-cool.gif');
+}
+.ryu-level {
+  background-image: url('../images/ryulevel.jpg');
+  background-size: cover;
+  background-position: left bottom;
 }
 /*HADOUKEN*/
 .hadouken {
@@ -46,4 +56,16 @@ body {
   top:168px;
   position: absolute;
   z-index: 10;
+}
+/*INSTRUCTIONS*/
+.instructions-content {
+  width:659px;
+  height:494px;
+  display: block;
+}
+.instructions-content p{
+  text-align: center;
+  font-style: 'Helvetica', Arial, sans-serif;
+  font-size: 3em;
+}
 }
