Updating font fixed fadeIn

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
 }
 .instructions-content p{
   text-align: center;
-  font-style: 'Helvetica', Arial, sans-serif;
+  font-style: 'Bangers', Arial, sans-serif;
   font-size: 3em;
 }
 }
